--- a/Logica de Programacion/primer_test.html
+++ b/Logica de Programacion/primer_test.html
@@ -5,7 +5,7 @@
 Hola, será esto un programa descubrelo <a href="https://www.youtube.com/?hl=es-419" > aqui </a>
 
 <script>
-    alert(" Sara huele como a bebe que no se bania por 3 meses, pero asi la quiero ");
+    alert(" hola ");
 </script>
 
 </html>
